FLUID-2788, FLUID-2787: this fixes the IE hasLayout bug triggered by the jquery UI Accordion.
svn path=/fluid/infusion/trunk/; revision=7261

--- a/src/webapp/components/uiOptions/css/UIOptions.css
+++ b/src/webapp/components/uiOptions/css/UIOptions.css
@@ -11,9 +11,12 @@
 .fl-uiOptions fieldset {margin:0; padding:0;}
 .fl-uiOptions ol {margin:0; padding:15px 0 0 0;}
 .fl-uiOptions li {padding:6px 0; clear:both; list-style-type:none; line-height:1.6em;}
-.fl-uiOptions legend {text-indent:-500%; margin-bottom:-1.6em;}
+.fl-uiOptions legend {text-indent:-500%; margin-bottom:-1.6em; visibility:hidden;}
 .fl-uiOptions .fl-uiOptions-buttons-refresher-5 {width:5em;}
 .fl-uiOptions .fl-uiOptions-buttons-refresher-10 {width:10em;}
+
+.fl-uiOptions .fl-accordion-content {zoom:1;}
+.fl-uiOptions .fl-accordion-content fieldset, .fl-uiOptions .fl-accordion-content span {display:inline;}
 
 .fl-uiOptions .fl-formLabels {text-align:right; padding-right:5px;}
 
